--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="Изображение WhatsApp 2025-10-08 в 10.02.47_83072a6c.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="images.jpeg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>churhanPortfolio</title>
@@ -114,4 +114,5 @@
     </footer>
 
 </body>
+
 </html>
