--- a/portfolio.html
+++ b/portfolio.html
@@ -115,10 +115,11 @@
     </div>
 
     <footer>
-    © Я не знаю что в футер писать
+    &copy; Я не знаю что в футер писать
     </footer>
 
 </body>
 
 </html>
+
 
