--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 <body>
 
     <nav>
-        <div class="logo"><b>Моё Портфолио</b></div>
+        <div><b>Моё Портфолио</b></div>
         <div class="links">
             <a href="https://youtu.be/3hVXt9NYiJA?si=_CIrlctDdoysx-um" target="_blank">Главная</a>
             <a href="https://youtu.be/EiAzJEhBzoo?si=KdlBiQmPfCAUNf-T" target="_blank">Контакты</a>
@@ -121,5 +121,6 @@
 </body>
 
 </html>
+
 
 
