--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 
     <nav>
         <div><b>Моё Портфолио</b></div>
-        <div class="links">
+        <div>
             <a href="https://youtu.be/3hVXt9NYiJA?si=_CIrlctDdoysx-um" target="_blank">Главная</a>
             <a href="https://youtu.be/EiAzJEhBzoo?si=KdlBiQmPfCAUNf-T" target="_blank">Контакты</a>
             <a href="https://www.youtube.com/live/ZIPCptw_Otg?si=PsvkV8fyjENw2cb4" target="_blank">Помощь</a>
@@ -41,7 +41,7 @@
         <tr>
             <td>Portfolio</td>
             <td>Сайт-портфолио</td>
-            <td><a class="ssilka" href="#">Открыть</a></td>
+            <td><a class="ssilka" href="https://github.com/alimansur1812/PORTFOLIO" target="_blank">Открыть</a></td>
         </tr>
         <tr>
             <td>Verstka</td>
@@ -56,7 +56,7 @@
         <tr>
             <td>First Site</td>
             <td>Самый первый сайт</td>
-            <td><a class="ssilka" href="https://github.com/alimansur1812/HTML-SATYBALDIEV-ALIMANSUR">Открыть</a></td>
+            <td><a class="ssilka" href="https://github.com/alimansur1812/HTML-SATYBALDIEV-ALIMANSUR" target="_blank">Открыть</a></td>
         </tr>
         </table>
     </div>
@@ -121,6 +121,7 @@
 </body>
 
 </html>
+
 
 
 
